Bug 1800992 - Invalidate frame in nsView::WindowResized. r=tnikkel

If all goes well this should also fix bug 1784760...

Differential Revision: https://phabricator.services.mozilla.com/D162773